
-- Removed legacy support for 'formnames' in base Object
-- All form functions have now been removed -- should use 'Factory' functions

-- Renamed global framework configuration options to start with 'OE' instead
   of 'EAAGLES'

--------------------------------------------------------------------------------
basic

   -- removed legacy support for factory names "BroadcastHandler", "MulticastHandler",
      and "UdpHandler" - instead use "UdpBroadcastHandler", "UdpMulticastHandler"
	  and "UdpUnicastHandler"

--------------------------------------------------------------------------------
basicGL


--------------------------------------------------------------------------------
dafif


--------------------------------------------------------------------------------
dis


--------------------------------------------------------------------------------
dynamics

   JSBSimModel class
      -- Added new slot parameter ('debugLevel') to set the debug level for JSBSim
         model instance. This controls the verbosity (i.e., output printed to console)
         of the model itself.  Slot parameter accepts an integer value.

--------------------------------------------------------------------------------
instruments


--------------------------------------------------------------------------------
ioDevice


--------------------------------------------------------------------------------
linearSys



--------------------------------------------------------------------------------
maps


--------------------------------------------------------------------------------
otw


--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation


--------------------------------------------------------------------------------
terrain
 

--------------------------------------------------------------------------------
