@@ -70,6 +70,9 @@ recorder
 --------------------------------------------------------------------------------
 simulation
 
+   Autopilot class
+      -- Fixed spelling error with 'velocityContoller' to 'velocityController'
+
 
 --------------------------------------------------------------------------------
 terrain
